// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Next/Tag Actionable 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV sc-TmcTc XtPqD"
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ egHqKA sc-hHftDr sc-fWSCIC cLDXoV dBCyhH"
      >
        <div
          className="sc-fKFyDc kIYkoy sc-bBXqnf iHGIIw"
        >
          Closable: 
        </div>
        <div
          className="sc-fKFyDc ipClrT sc-bBXqnf iHGIIw"
        >
          tag
        </div>
      </div>
      <button
        className="StyledButton-sc-323bzc-0 jajFOe sc-bqyKva sc-bkzZxe gjQfnS hgJIgM sc-dIUggk fBWcUT sc-dwfUOf gpFjMJ"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-11 "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
    </div>
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV sc-TmcTc XtPqD"
    >
      <button
        className="StyledButton-sc-323bzc-0 jajFOe sc-bqyKva sc-bkzZxe gjQfnS hgJIgM sc-dIUggk YDvpG"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="sc-gKsewC cgpPfo sc-iBPRYJ egHqKA sc-hHftDr sc-fWSCIC cLDXoV dBCyhH"
        >
          <div
            className="sc-fKFyDc kIYkoy sc-bBXqnf iHGIIw"
          >
            Clickable: 
          </div>
          <div
            className="sc-fKFyDc ipClrT sc-bBXqnf iHGIIw"
          >
            tag
          </div>
        </div>
      </button>
    </div>
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV sc-TmcTc XtPqD"
    >
      <button
        className="StyledButton-sc-323bzc-0 jajFOe sc-bqyKva sc-bkzZxe gjQfnS hgJIgM sc-dIUggk YDvpG"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <div
          className="sc-gKsewC cgpPfo sc-iBPRYJ egHqKA sc-hHftDr sc-fWSCIC cLDXoV dBCyhH"
        >
          <div
            className="sc-fKFyDc kIYkoy sc-bBXqnf iHGIIw"
          >
            Clickable and 
          </div>
          <div
            className="sc-fKFyDc ipClrT sc-bBXqnf iHGIIw"
          >
            closable
          </div>
        </div>
      </button>
      <button
        className="StyledButton-sc-323bzc-0 jajFOe sc-bqyKva sc-bkzZxe gjQfnS hgJIgM sc-dIUggk fBWcUT sc-dwfUOf gpFjMJ"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-times fa-w-11 "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Next/Tag Multiple values in a tag 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV sc-TmcTc XtPqD"
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ egHqKA sc-hHftDr sc-fWSCIC cLDXoV dBCyhH"
      >
        <div
          className="sc-fKFyDc kIYkoy sc-bBXqnf iHGIIw"
        >
          Tag1 contains 
        </div>
        <div
          className="sc-fKFyDc ipClrT sc-bBXqnf iHGIIw"
        >
          value1
        </div>
        <div
          className="sc-fKFyDc fDrOZM sc-bBXqnf iHGIIw"
        >
            or  
        </div>
        <div
          className="sc-fKFyDc kIYkoy sc-bBXqnf iHGIIw"
        >
          Tag2 contains 
        </div>
        <div
          className="sc-fKFyDc ipClrT sc-bBXqnf iHGIIw"
        >
          value2
        </div>
      </div>
    </div>
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV sc-TmcTc XtPqD"
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ egHqKA sc-hHftDr sc-fWSCIC cLDXoV dBCyhH"
      >
        <div
          className="sc-fKFyDc kIYkoy sc-bBXqnf iHGIIw"
        >
          Tag3 contains 
        </div>
        <div
          className="sc-fKFyDc ipClrT sc-bBXqnf iHGIIw"
        >
          value3
        </div>
        <div
          className="sc-fKFyDc fDrOZM sc-bBXqnf iHGIIw"
        >
            and  
        </div>
        <div
          className="sc-fKFyDc kIYkoy sc-bBXqnf iHGIIw"
        >
          Tag4 contains 
        </div>
        <div
          className="sc-fKFyDc ipClrT sc-bBXqnf iHGIIw"
        >
          value4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Next/Tag Standard 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-fXoxut gqvpza"
>
  <div
    className="sc-gKsewC cgpPfo sc-iBPRYJ frgkGL"
  >
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV sc-TmcTc XtPqD"
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ egHqKA sc-hHftDr sc-fWSCIC cLDXoV dBCyhH"
      >
        <div
          className="sc-fKFyDc kIYkoy sc-bBXqnf iHGIIw"
        >
          Tag1: 
        </div>
        <div
          className="sc-fKFyDc ipClrT sc-bBXqnf iHGIIw"
        >
          value1
        </div>
      </div>
    </div>
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV sc-TmcTc XtPqD"
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ egHqKA sc-hHftDr sc-fWSCIC cLDXoV dBCyhH"
      >
        <div
          className="sc-fKFyDc kIYkoy sc-bBXqnf iHGIIw"
        >
          Tag2 has 
        </div>
        <div
          className="sc-fKFyDc ipClrT sc-bBXqnf iHGIIw"
        >
          operator
        </div>
      </div>
    </div>
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV sc-TmcTc XtPqD"
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ egHqKA sc-hHftDr sc-fWSCIC cLDXoV dBCyhH"
      >
        <div
          className="sc-fKFyDc ipClrT sc-bBXqnf iHGIIw"
        >
          only value
        </div>
      </div>
    </div>
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV sc-TmcTc XtPqD"
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ egHqKA sc-hHftDr sc-fWSCIC cLDXoV dBCyhH"
      >
        <div
          className="sc-fKFyDc kIYkoy sc-bBXqnf iHGIIw"
        >
          only name
        </div>
      </div>
    </div>
    <div
      className="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV sc-TmcTc XtPqD"
    >
      <div
        className="sc-gKsewC cgpPfo sc-iBPRYJ egHqKA sc-hHftDr sc-fWSCIC cLDXoV dBCyhH"
      >
        <div
          className="sc-fKFyDc eWuelo sc-bBXqnf iHGIIw"
        >
          no value
        </div>
      </div>
    </div>
  </div>
</div>
`;
